--- a/sched_policy.tex
+++ b/sched_policy.tex
@@ -1,6 +1,13 @@
 \section{Cerberus and Optimization Enhancement}
 \label{Sec:Scheduler}
 
+\begin{figure}[!htbp]
+        \centering
+        \includegraphics[width=3.6in]{CerberusBBSystem}
+        \caption{Scheduling Workflow of Burst Buffer Aware Cerberus}
+        \label{Fig:CerberusQueues}
+\end{figure}
+
 %=======XY======
 The traditional batch scheduler on system without burst buffer only
 takes job size (required number of nodes) and expected runtime into scheduling decision making. 
