--- a/experiments.tex
+++ b/experiments.tex
@@ -238,7 +238,7 @@ are significantly reduced, 272,741 and 376,026 seconds respectively.
 
 
 \subsection{3-Phase Model v.s. 1-Phase Model}
-In this section we validate our 3-phase model by answering question Q2.
+In this section we validate our 3-phase model by answering question \textbf{Q2}.
 Simulation results demonstrate that jobs performance are improved 
 when the scheduler makes scheduling decision in each phase separately.
 thus encouraging users to provide detailed burst buffer demand in each phase for her job.
@@ -517,7 +517,7 @@ the necessity that user provides data capacity demand for each phase.
 %we see more than \textit{80\% of the tasks response faster when we do optimization}.
 
 %===========XY===============
-In this section we answer question Q3 by showing that
+In this section we answer question \textbf{Q3} by showing that
 adopting optimizations in each scheduling phase brings further improvement,
 comparing with the naive first come first server (FCFS) policy adopted in previous experiments.
 Specifically, in the stage-in and stage-out phase, Cerberus schedules jobs in $Q_I$ and $Q_O$
