--- a/conclusion.tex
+++ b/conclusion.tex
@@ -3,15 +3,27 @@
 
 In this study we explore the way HPC workload scheduler allocates burst buffer,
 a new storage resources that absorb 3 general types of IO operations:
-file staging in, application checkpointing, and file staging out.
+data staging in, application checkpointing, and data staging out.
 We propose a 3-phase job model specially
 tailored to burst buffer's typical usage scenarios.
-Cerberus is presented on the basis of such model.
-We divide the scheduling problem into 3 phases
+A new burst buffer aware batch scheduler Cerberus is presented
+on the basis of the 3-phase job model.
+We divide the job scheduling problem into 3 sub-phases
 and conquer them separately using dynamic programming based optimization.
 Simulation results show that
 Cerberus could improve application's perceived IO bandwidth significantly.
-There are a lot of future works to be done for Cerberus.
-Implementing Cerberus on realistic environment, for example,
-Trinity supercomputing system, should be beneficial to a variety of
-scientific applications.
+
+
+Since the burst buffer enabled system is not ready for the massive 
+use by the community, 
+there is no study about the burst buffer demand of the typical scientific workloads.
+We plan to conduct comprehensive sensitivity study about the performance of Cerberus
+when scheduling workloads with diversified resource demands. Such study could provide
+valuable insight for both computing facilities configure their burst buffer subsystem.
+HPC systems users can also benefit from such study by utilizing burst buffer for developing
+their scientific applications.
+In the future, we also plan to integrate other optimization algorithms into Cerberus
+to satisfy various scheduling objectives from the community. 
+Cerberus could also become very versatile 
+to deal with other new schedulable system resources.
+
