--- a/experiments.tex
+++ b/experiments.tex
@@ -272,7 +272,7 @@ Thus users are encouraged to provide detailed burst buffer demand in each phase 
 % %Response time of system without burst buffer devices are also plotted for comparison.
 
 %========XY========================
-In Figure~\ref{Fig:3Pvs1PResponse}, the scheduling results based on three models
+In Figure~\ref{Fig:3Pvs1PResponse}, the scheduling results are based on three models
 are presented:
 \begin{itemize}
         \item \textbf{1-Phase-1D}: Jobs are submitted with total burst buffer demand, 
